[gd_scene load_steps=26 format=3 uid="uid://br6g1oty181af"]

[ext_resource type="Texture2D" uid="uid://c7v42viefr56j" path="res://Main/game_objects/player/Spritesheets/Hurt.png" id="1_5j20w"]
[ext_resource type="Texture2D" uid="uid://cpoarfhca0mo7" path="res://Main/game_objects/player/Spritesheets/Idle.png" id="1_61lih"]
[ext_resource type="Script" uid="uid://dim0x7apjfdcb" path="res://Main/game_objects/player/player.gd" id="1_aqk3a"]
[ext_resource type="PackedScene" uid="uid://uklthf3tqr60" path="res://Main/abilities/attack_ability/attack_controller.tscn" id="2_tb4ck"]
[ext_resource type="Texture2D" uid="uid://be8en5mk6dvjq" path="res://Main/game_objects/player/Spritesheets/Jump.png" id="3_aqk3a"]
[ext_resource type="PackedScene" uid="uid://dvgkrqhywywp1" path="res://Main/components/health_component.tscn" id="3_pwb87"]
[ext_resource type="PackedScene" uid="uid://cyx3f1l7rwe3l" path="res://Main/components/flash_component.tscn" id="4_qjtct"]
[ext_resource type="Texture2D" uid="uid://c3vxiosc7ygwp" path="res://Main/game_objects/player/Spritesheets/Fall.png" id="4_rul8u"]
[ext_resource type="Texture2D" uid="uid://bv4aibb6su7w4" path="res://Main/game_objects/player/Spritesheets/Land.png" id="5_kg0wl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pwb87"]
bg_color = Color(0.0313726, 0.101961, 0.0313726, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qjtct"]
bg_color = Color(0.756863, 0, 0.176471, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.0304329, 0.102848, 0.0302005, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_wktog"]
radius = 32.0

[sub_resource type="AtlasTexture" id="AtlasTexture_2147b"]
atlas = ExtResource("1_5j20w")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_csact"]
atlas = ExtResource("1_5j20w")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6xfg"]
atlas = ExtResource("1_5j20w")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fx6gu"]
atlas = ExtResource("1_5j20w")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6miq6"]
atlas = ExtResource("1_61lih")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ft5u"]
atlas = ExtResource("1_61lih")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5jfoa"]
atlas = ExtResource("1_61lih")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5j20w"]
atlas = ExtResource("1_61lih")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdil5"]
atlas = ExtResource("5_kg0wl")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tfsyo"]
atlas = ExtResource("5_kg0wl")
region = Rect2(64, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_aqk3a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2147b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_csact")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6xfg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fx6gu")
}],
"loop": true,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6miq6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ft5u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5jfoa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5j20w")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_aqk3a")
}, {
"duration": 1.0,
"texture": ExtResource("3_aqk3a")
}, {
"duration": 1.0,
"texture": ExtResource("4_rul8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdil5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tfsyo")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rul8u"]
size = Vector2(21, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qjtct"]
size = Vector2(20, 10)

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 0
script = ExtResource("1_aqk3a")

[node name="ability_manager" type="Node" parent="."]

[node name="AttackController" parent="ability_manager" instance=ExtResource("2_tb4ck")]

[node name="health_component" parent="." instance=ExtResource("3_pwb87")]

[node name="FlashComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("4_qjtct")]
health_component = NodePath("../health_component")
sprite = NodePath("../AnimatedSprite2D")

[node name="GracePeriod" type="Timer" parent="."]
one_shot = true

[node name="ProgressBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(25, 4)
offset_left = -12.0
offset_top = 3.0
offset_right = 12.0
offset_bottom = 7.0
pivot_offset = Vector2(12, 2)
theme_override_styles/background = SubResource("StyleBoxFlat_pwb87")
theme_override_styles/fill = SubResource("StyleBoxFlat_qjtct")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="PickUpBottles" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickUpBottles"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_wktog")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_aqk3a")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.630933
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -6)
shape = SubResource("RectangleShape2D_rul8u")

[node name="PlayerHurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHurtBox"]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_qjtct")

[connection signal="timeout" from="GracePeriod" to="." method="_on_grace_period_timeout"]
[connection signal="area_entered" from="PlayerHurtBox" to="." method="_on_player_hurt_box_area_entered"]
[connection signal="area_exited" from="PlayerHurtBox" to="." method="_on_player_hurt_box_area_exited"]
